@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 2cd35ee426094c692d031553f4355480d7fd069e ChangeLog
+SHA1 89153227d4571ab178be8faa2d3eee0a0ef9096f ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 983c8cdcf9d6a0c700eeeb377eb2d8a661cc7b53 META.yml
+SHA1 cba5e0ddcaefa8b5eaf915d916c048686bc7a545 META.yml
 SHA1 85f9401b2c422cd079d521911905670a71d266c1 Makefile.PL
 SHA1 2af679880fb8ac967e5d63069f8ec3b3508425d3 README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 64ff8a5c429155e60a6a1d6ee3e8c46fb660400f lib/Term/Menus.pm
+SHA1 cc67f8d46607d33d722ceeaa833bd930d3cd1b2e lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk7v36IACgkQ2NfPFcKvV2BQhACeJ0snc/SQT5gFjRUs1QaoG4As
-n+QAn0Jk7qprN/+YG0r3P/hzN9NiAzB3
-=YRc+
+iEYEARECAAYFAk8QnUsACgkQ2NfPFcKvV2AMLgCfffSVsy2H9bT6aO2N1wnlch35
+hksAnAkoBVwJWSgt8bNnJXIoQFpoppT8
+=dnvp
 -----END PGP SIGNATURE-----
